--- a/README.Rmd
+++ b/README.Rmd
@@ -7,7 +7,7 @@ output: github_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-Ce dépôt centre tous les documents et informations employé pour le comité d'accompagnement de **Guyliann Engels**
+Ce dépôt centre tous les documents et informations employés pour le comité d'accompagnement de **Guyliann Engels**
 
 ## Auteur
 
